--- a/html/invite_friends.html
+++ b/html/invite_friends.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="col-12 p-0">
-                    <img src="/assets/images/invite_friends/banner.png" alt="banner" class="banner">
+                    <img src="../assets/images/invite_friends/banner.png" alt="banner" class="banner">
                 </div>
                 <div class="col-12 px-4">
                     <div class="row">
@@ -53,22 +53,22 @@
                         <div class="col-6">
                             <p class="label required">Mã QR Affiliate</p>
                             <div class="col-6 d-flex align-items-center flex-column w-100 gap-2">
-                                <img src="/assets/images/invite_friends/qrcode.png" alt="qr_code" class="qr_code">
-                                <img src="/assets/images/invite_friends/dowload.png" alt="download" class="download">
+                                <img src="../assets/images/invite_friends/qrcode.png" alt="qr_code" class="qr_code">
+                                <img src="../assets/images/invite_friends/dowload.png" alt="download" class="download">
                             </div>
                         </div>
                         <div class="col-6">
                             <p class="label required">Mã QR Web site</p>
                             <div class="col-6 d-flex align-items-center flex-column w-100 gap-2">
-                                <img src="/assets/images/invite_friends/qrcode.png" alt="qr_code" class="qr_code">
-                                <img src="/assets/images/invite_friends/dowload.png" alt="download" class="download">
+                                <img src="../assets/images/invite_friends/qrcode.png" alt="qr_code" class="qr_code">
+                                <img src="../assets/images/invite_friends/dowload.png" alt="download" class="download">
                             </div>
                         </div>
                         <div class="col-12">
                             <p class="label required text-center">Kho ID Affiliate</p>
                             <div class="id-affiliate" style="background: #00426d;">
-                                <img src="/assets/images/bgId.gif" alt="" style="width: 70px!important; position: absolute; left: 14%;">
-                                <img src="/assets/images/68.png" alt="68" style="width: 40px!important;">
+                                <img src="../assets/images/bgId.gif" alt="" style="width: 70px!important; position: absolute; left: 14%;">
+                                <img src="../assets/images/68.png" alt="68" style="width: 40px!important;">
                             </div>
                         </div>
                         <div class="col-12">
