--- a/html/logo_banner_setting.html
+++ b/html/logo_banner_setting.html
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12" style="background: url('/assets/images/logo-banner-bg.png') 50% 50% / cover;">
+                <div class="col-12" style="background: url('../assets/images/logo-banner-bg.png') 50% 50% / cover;">
                     <div class="row">
                         <div class="col-6">
                             <div class="add-logo_banner active">Thêm logo</div>
@@ -37,8 +37,8 @@
                         </div>
                         <div class="col-12 add_logo">
                             <h5>THÊM LOGO</h5>
-                            <img class="camera" src="/assets/images/camera2.png" alt="camera" />
-                            <img class="logo" src="/assets/images/logo.png" alt="logo" />
+                            <img class="camera" src="../assets/images/camera2.png" alt="camera" />
+                            <img class="logo" src="../assets/images/logo.png" alt="logo" />
                         </div>
                     </div>
                 </div>
@@ -46,8 +46,8 @@
                     <div class="row">
                         <div class="col-12 add_logo">
                             <h5 class="fw-bolder" style="color: #00426d;">THÊM ẢNH E CARD</h5>
-                            <img class="camera" src="/assets/images/camera1.png" alt="camera" />
-                            <img src="/assets/images/ecard.png" alt="logo" style="width: 100%;" />
+                            <img class="camera" src="../assets/images/camera1.png" alt="camera" />
+                            <img src="../assets/images/ecard.png" alt="logo" style="width: 100%;" />
                         </div>
                     </div>
                 </div>
