--- a/html/product_setting.html
+++ b/html/product_setting.html
@@ -53,7 +53,7 @@
                                 <tr>
                                     <td>1</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo1.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo1.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -63,15 +63,15 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo2.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo2.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -81,15 +81,15 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo4.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo4.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -99,15 +99,15 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo5.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo5.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -117,15 +117,15 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>6</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo6.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo6.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -135,15 +135,15 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>7</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo7.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo7.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -153,15 +153,15 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>8</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo8.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo8.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -171,15 +171,15 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>9</td>
                                     <td>
-                                        <img class="product_logo" src="/assets/images/product_setting/product-logo9.png"
+                                        <img class="product_logo" src="../assets/images/product_setting/product-logo9.png"
                                             alt="product-logo" />
                                     </td>
                                     <td>
@@ -189,8 +189,8 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/icon-post.png" alt="update" />
-                                            <img class="action" src="/assets/images/delete.png" alt="update" />
+                                            <img class="action" src="../assets/images/icon-post.png" alt="update" />
+                                            <img class="action" src="../assets/images/delete.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
