--- a/html/shop_intro.html
+++ b/html/shop_intro.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="col-9 position-relative">
                                 <input type="text" id="image" class="form-input">
-                                <img src="/assets/images/camera3.png" alt="camera" class="camera1">
+                                <img src="../assets/images/camera3.png" alt="camera" class="camera1">
                             </div>
                             <div class="col-3">
                                 <label for="stt" class="form-label">Số thứ tự:</label>
