--- a/html/list_products.html
+++ b/html/list_products.html
@@ -70,8 +70,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
@@ -83,8 +83,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
@@ -96,8 +96,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
@@ -109,8 +109,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
@@ -122,8 +122,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>6</td>
@@ -135,8 +135,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>7</td>
@@ -148,8 +148,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>8</td>
@@ -161,8 +161,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>9</td>
@@ -174,8 +174,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>10</td>
@@ -187,8 +187,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>11</td>
@@ -200,8 +200,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>12</td>
@@ -213,8 +213,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>13</td>
@@ -226,8 +226,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                                 <tr>
                                     <td>14</td>
@@ -239,8 +239,8 @@
                                     <td>350,000</td>
                                     <td>20% = 70,000</td>
                                     <td></td>
-                                    <td><img class="action" src="/assets/images/copy.png" alt="copy" /></td>
-                                    <td><img class="action" src="/assets/images/completed.png" alt="completed" /></td>
+                                    <td><img class="action" src="../assets/images/copy.png" alt="copy" /></td>
+                                    <td><img class="action" src="../assets/images/completed.png" alt="completed" /></td>
                                 </tr>
                             </tbody>
                         </table>
