--- a/html/select_industries.html
+++ b/html/select_industries.html
@@ -66,7 +66,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -77,7 +77,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -88,7 +88,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -99,7 +99,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -110,7 +110,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -121,7 +121,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -132,7 +132,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -143,7 +143,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -154,7 +154,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
@@ -165,7 +165,7 @@
                                     <td></td>
                                     <td>
                                         <div class="list-action">
-                                            <img class="action" src="/assets/images/completed.png" alt="update" />
+                                            <img class="action" src="../assets/images/completed.png" alt="update" />
                                         </div>
                                     </td>
                                 </tr>
